# linkml-test-template

./: Makefile  README.md  mkdocs.yml  setup.cfg  setup.py
.github/workflows/: main.yaml
docs/: 404.html  Boolean.html  Date.html  Datetime.html  Decimal.html  Double.html  Employee.html  Float.html  FriendlyPerson.html  FriendlyPerson_knows.html  Integer.html  Manager.html  Ncname.html  Nodeidentifier.html  Objectidentifier.html  Organization.html  Person.html  String.html  Time.html  Uri.html  Uriorcurie.html  YearCount.html  age_in_years.html  aliases.html  credits.html  employee_last_name.html  first_name.html  has_boss.html  has_employees.html  home.html  id.html  index.html  last_name.html  name.html  person__first_name.html  person__id.html  person__knows.html  person__last_name.html  search.html  sitemap.xml
docs/search/: search_index.json
linkml_test_template/: sample_model.py
linkml_test_template/graphql/: sample_model.graphql
linkml_test_template/json/: sample_model.json
linkml_test_template/jsonld/: sample_model.context.jsonld
linkml_test_template/jsonschema/: sample_model.schema.json
linkml_test_template/owl/: sample_model.owl.ttl
linkml_test_template/rdf/: sample_model.model.ttl
linkml_test_template/shex/: sample_model.shex  sample_model.shexj
model/: CONFIG.yaml
model/schema/: sample_model.yaml  sample_model2.yaml
tests/: test_input_against_model.py
