[metadata]
name = linkml_test_template
url = https://github.com/joeflack4/linkml-test-template
author = Joe Flack
author_email = joeflack4@gmail.com
summary = A knowledge graph
description = A knowledge graph
long_description = A knowledge graph
home_page = https://joeflack4.github.io/linkml_test_template
license = CC0 1.0 Universal
python_requires = >=3.7
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Information Technology
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = 
    linkml
    LOD
    Modeling
    Linked open data
    model

[options]
include_package_data = True

[files]
packages =
    linkml_test_template

data-files = linkml_test_template/model = linkml_test_template/model/*
    linkml_test_template/jsonld_context = linkml_test_template/jsonld_context/*
    linkml_test_template/json_schema = linkml_test_template/json_schema/*
    linkml_test_template/model = linkml_test_template/model/*
    linkml_test_template/graphql = linkml_test_template/graphql/*
    linkml_test_template/owl = linkml_test_template/owl/*
    linkml_test_template/rdf = linkml_test_template/rdf/*
    linkml_test_template/shex = linkml_test_template/shex/*


